chốt nộp bản final

--- a/content/4_Thong_ke_mo_ta.tex
+++ b/content/4_Thong_ke_mo_ta.tex
@@ -61,7 +61,7 @@ Chúng ta so sánh  lần lượt từng order\_price, delivery\_charges, coupon
 
 \textbf{Nhận xét:} Từ 4 đồ thị hình \ref{a}, hình \ref{b}, hình \ref{c}, hình \ref{d} chúng ta rút ra được hai biến order\_price và coupon\_discount là 2 biến có ảnh hưởng tới order\_total hay còn gọi là có quan hệ tuyến tính. Hai biến delivery\_charges và distance\_to\_nearest\_warehouse không có ảnh hưởng tới order\_total hay không có quan hệ tuyến tính.
 
-\subsubsection{Phân tích biến phân loại bằng biểu đồ boxplot}
+\subsection{Phân tích biến phân loại bằng biểu đồ boxplot}
 Chúng ta phân tích biến order\_total theo các biến nearest\_warehouse, season, is\_expedited\_deli-very, is\_happy\_customer.
 \begin{figure}[!htbp]
     \centering
