--- a/content/7_Nguon_du_lieu_nguon_code.tex
+++ b/content/7_Nguon_du_lieu_nguon_code.tex
@@ -1,4 +1,9 @@
-% \pagebreak
+\newpage
+\addtocounter{page}{-1}
+\cfoot{}  % Disable center footer (page number will be removed)
+\lfoot{}  % Disable left footer
+\rfoot{}  % Disable right footer
+\renewcommand{\footrulewidth}{0pt}
 \section{Nguồn dữ liệu và nguồn code}
 Nguồn dữ liệu (dirty\_data.csv): \href{https://www.kaggle.com/datasets/muhammadshahrayar/transactional-retail-dataset-of-electronics-store?select=dirty_data.csv}{DATA}
 
