--- a/content/8_Tai_lieu_tham_khao.tex
+++ b/content/8_Tai_lieu_tham_khao.tex
@@ -1,9 +1,9 @@
-\newpage
-\addtocounter{page}{-1}
-\cfoot{}  % Disable center footer (page number will be removed)
-\lfoot{}  % Disable left footer
-\rfoot{}  % Disable right footer
-\renewcommand{\footrulewidth}{0pt}
+% \newpage
+% \addtocounter{page}{-1}
+% \cfoot{}  % Disable center footer (page number will be removed)
+% \lfoot{}  % Disable left footer
+% \rfoot{}  % Disable right footer
+% \renewcommand{\footrulewidth}{0pt}
 \addcontentsline{toc}{section}{Tài liệu tham khảo}
 \renewcommand{\refname}{Tài liệu tham khảo}
 \begin{thebibliography}{9}
